--- a/index.html
+++ b/index.html
@@ -172,16 +172,10 @@
       <section class="section-three">
         <div class="container container-section-three">
           <h2>Навички</h2>
-          <ul>
-            <li>
-              <strong>Фронтенд:</strong> HTML5, CSS3, JavaScript, адаптивна
-              верстка, робота з Figma
-            </li>
-            <li>
-              <strong>Бекенд:</strong> Node.js, Express.js, MongoDB / PostgreSQL
-              (в процесі вивчення)
-            </li>
-            <li><strong>Інструменти:</strong> Git, GitHub, VS Code</li>
+          <ul class="container-section-three-ul">
+            <li class="container-section-three-li">Фронтенд:</br><span>HTML5, CSS3, JavaScript, адаптивна
+              верстка, робота з Figma</span></li>
+            <li class="container-section-three-li">Інструменти:</br><span>Git, GitHub, VS Code</span></li>
           </ul>
         </div>
       </section>
