--- a/index.html
+++ b/index.html
@@ -172,43 +172,84 @@
       <section class="section-three">
         <div class="container container-section-three">
           <h2>Навички</h2>
-          <ul class="container-section-three-ul">
-            <li class="container-section-three-li">Фронтенд:</br><span>HTML5, CSS3, JavaScript, адаптивна
-              верстка, робота з Figma</span></li>
-            <li class="container-section-three-li">Інструменти:</br><span>Git, GitHub, VS Code</span></li>
-          </ul>
+<div class="container-section-three-ul-all">
+            <div>
+              <p>Фронтенд:</p>
+              <ul class="container-section-three-ul">
+                <li class="container-section-three-li">HTML5, CSS3, JavaScript, адаптивна
+                  верстка, робота з Figma</li>
+                  <li class="container-section-three-li">CSS3</li>
+                  <li class="container-section-three-li">JavaScript</li>
+                  <li class="container-section-three-li">адаптивна
+                  верстка</li>
+                  <li class="container-section-three-li">робота з Figma</li>
+                  </ul>
+            </div>
+            <div>
+              <p>Інструменти:</p>
+              <ul class="container-section-three-ul">
+                <li class="container-section-three-li">Git</li>
+                <li class="container-section-three-li">GitHub</li>
+                <li class="container-section-three-li">VS Code</li>
+              </ul>
+            </div>
+</div>
         </div>
       </section>
 
       <section class="section-four">
         <div class="container container-section-four">
           <h2>Проєкти</h2>
-          <ul class="project-list">
-            <li class="project">
-              <h3>Назва проєкту 1</h3>
-              <p>Опис: сайт з адаптивною версткою з макету Figma.</p>
-              <p>Технології: HTML, CSS, JavaScript</p>
-              <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
-            </li>
-            <li class="project">
-              <h3>Назва проєкту 2</h3>
-              <p>Опис: веб-додаток із використанням Node.js.</p>
-              <p>Технології: HTML, CSS, JS, Node.js</p>
-              <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
-            </li>
-            <li class="project">
-              <h3>Назва проєкту 3</h3>
-              <p>Опис: веб-додаток із використанням Node.js.</p>
-              <p>Технології: HTML, CSS, JS, Node.js</p>
-              <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
-            </li>
-            <li class="project">
-              <h3>Назва проєкту 4</h3>
-              <p>Опис: веб-додаток із використанням Node.js.</p>
-              <p>Технології: HTML, CSS, JS, Node.js</p>
-              <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
-            </li>
-          </ul>
+          <div class="container-section-four-ul">
+            <h3 class="project-list-h3">Назва проєкту 1</h3>
+            <p class="project-list-p-opis">Опис: сайт з адаптивною версткою з макету Figma.</p>
+            <p>Технології:</p>
+            <div>
+              <ul class="project-list">
+                <li class="project">HTML</li>
+                <li class="project">CSS</li>
+                <li class="project">JavaScript</li>
+                  <a href="#">GitHub</a>
+                  <a href="#">Live Demo</a>
+              </ul>
+            </div>
+              
+            <h3 class="project-list-h3">Назва проєкту 1</h3>
+            <p class="project-list-p-opis">Опис: сайт з адаптивною версткою з макету Figma.</p>
+            <p>Технології:</p>
+                        <div>
+                          <ul class="project-list">
+                <li class="project">HTML</li>
+                <li class="project">CSS</li>
+                <li class="project">JavaScript</li>
+                  <a href="#">GitHub</a> <a href="#">Live Demo</a>
+              </ul>
+                        </div>
+  
+            <h3 class="project-list-h3">Назва проєкту 1</h3>
+            <p class="project-list-p-opis">Опис: сайт з адаптивною версткою з макету Figma.</p>
+            <p>Технології:</p>
+                       <div>
+                          <ul class="project-list">
+                <li class="project">HTML</li>
+                <li class="project">CSS</li>
+                <li class="project">JavaScript</li>
+                  <a href="#">GitHub</a> <a href="#">Live Demo</a>
+              </ul>
+                       </div>
+  
+            <h3 class="project-list-h3">Назва проєкту 1</h3>
+            <p class="project-list-p-opis">Опис: сайт з адаптивною версткою з макету Figma.</p>
+            <p>Технології:</p>
+                       <div>
+                          <ul class="project-list">
+                <li class="project">HTML</li>
+                <li class="project">CSS</li>
+                <li class="project">JavaScript</li>
+                  <a href="#">GitHub</a> <a href="#">Live Demo</a>
+              </ul>
+                       </div>
+          </div>
         </div>
       </section>
 
