--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <section class="section-four">
         <div class="container container-section-four">
           <h2>Проєкти</h2>
-          <div class="container-section-four-ul">
+          <div class="container-section-four-ul-all">
             <h3 class="project-list-h3">Назва проєкту 1</h3>
             <p class="project-list-p-opis">Опис: сайт з адаптивною версткою з макету Figma.</p>
             <p>Технології:</p>
@@ -253,35 +253,59 @@
         </div>
       </section>
 
-      <section class="section-five">
+     <section class="section-five">
         <div class="container container-section-five">
           <h2>Макети фігма</h2>
-          <ul class="project-list">
-            <li class="project">
-              <h3>Назва макету 1</h3>
-              <p>Опис: сайт з адаптивною версткою з макету Figma.</p>
-              <p>Технології: HTML, CSS, JavaScript</p>
-              <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
-            </li>
-            <li class="project">
-              <h3>Назва макету 2</h3>
-              <p>Опис: веб-додаток із використанням Node.js.</p>
-              <p>Технології: HTML, CSS, JS, Node.js</p>
-              <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
-            </li>
-            <li class="project">
-              <h3>Назва макету 3</h3>
-              <p>Опис: веб-додаток із використанням Node.js.</p>
-              <p>Технології: HTML, CSS, JS, Node.js</p>
-              <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
-            </li>
-            <li class="project">
-              <h3>Назва макету 4</h3>
-              <p>Опис: веб-додаток із використанням Node.js.</p>
-              <p>Технології: HTML, CSS, JS, Node.js</p>
-              <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
-            </li>
-          </ul>
+          <div class="container-section-five-ul-all">
+            <h3 class="project-list-h3">Назва макету 1</h3>
+            <p class="project-list-p-opis">Опис: макету з адаптивною версткою</p>
+            <p>Технології:</p>
+            <div>
+              <ul class="project-list-five">
+                <li class="project">HTML</li>
+                <li class="project">CSS</li>
+                <li class="project">JavaScript</li>
+                  <a href="#">GitHub</a>
+                  <a href="#">Live Demo</a>
+              </ul>
+            </div>
+              
+            <h3 class="project-list-h3">Назва макету 2</h3>
+            <p class="project-list-p-opis">Опис: макету з адаптивною версткою</p>
+            <p>Технології:</p>
+                        <div>
+                          <ul class="project-list">
+                <li class="project">HTML</li>
+                <li class="project">CSS</li>
+                <li class="project">JavaScript</li>
+                  <a href="#">GitHub</a> <a href="#">Live Demo</a>
+              </ul>
+                        </div>
+  
+            <h3 class="project-list-h3">Назва макету 3</h3>
+            <p class="project-list-p-opis">Опис: макету з адаптивною версткою</p>
+            <p>Технології:</p>
+                       <div>
+                          <ul class="project-list">
+                <li class="project">HTML</li>
+                <li class="project">CSS</li>
+                <li class="project">JavaScript</li>
+                  <a href="#">GitHub</a> <a href="#">Live Demo</a>
+              </ul>
+                       </div>
+  
+            <h3 class="project-list-h3">Назва макету 4</h3>
+            <p class="project-list-p-opis">Опис: макету з адаптивною версткою</p>
+            <p>Технології:</p>
+                       <div>
+                          <ul class="project-list">
+                <li class="project">HTML</li>
+                <li class="project">CSS</li>
+                <li class="project">JavaScript</li>
+                  <a href="#">GitHub</a> <a href="#">Live Demo</a>
+              </ul>
+                       </div>
+          </div>
         </div>
       </section>
 
