--- a/index.html
+++ b/index.html
@@ -406,5 +406,18 @@
         </div>
       </div>
     </footer>
+  </main>
+   <div class="scroll-buttons">
+      <button type="button" class="scroll-btn up" aria-label="Scroll to top">
+        ↑
+      </button>
+      <button
+        type="button"
+        class="scroll-btn down"
+        aria-label="Scroll to bottom"
+      >
+        ↓
+      </button>
+    </div>
   </body>
 </html>
