--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <nav class="menu">
           <ul class="menu-list">
             <li><a href="./index.html" class="menu-link">Fullstack</a></li>
-            <li><a href="#pricing" class="menu-link">Навички</a></li>
+            <li><a href="#skills" class="menu-link">Навички</a></li>
             <li><a href="#my-work" class="menu-link">Мої роботи</a></li>
             <li><a href="#figma" class="menu-link">Макети фігма</a></li>
             <li><a href="#figma-desinge" class="menu-link">Дизайнер</a></li>
@@ -87,7 +87,7 @@
     
               <ul class="mobile-menu-list">
                 <li><a href="./index.html" class="mobile-menu-link">Fullstack</a></li>
-                <li><a href="#pricing" class="mobile-menu-link">Навички</a></li>
+                <li><a href="#skills" class="mobile-menu-link">Навички</a></li>
                 <li><a href="#my-work" class="mobile-menu-link">Мої роботи</a></li>
                 <li><a href="#figma" class="mobile-menu-link">Макети фігма</a></li>
                 <li><a href="#figma-desinge" class="mobile-menu-link">Дизайнер</a></li>
@@ -97,28 +97,28 @@
   
     <ul class="mobile-menu-social-list">
                 <li class="mobile-menu-social-iteam">
-                    <a href="" class="mobile-menu-social-link">
+                    <a href="" class="mobile-menu-social-link" aria-label="Instagram">
                         <svg class="social-icon" width="24" height="24">
                             <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="mobile-menu-social-iteam">
-                    <a href="" class="mobile-menu-social-link">
+                    <a href="" class="mobile-menu-social-link" aria-label="twitter">
                         <svg class="social-icon" width="24" height="24">
                             <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="mobile-menu-social-iteam">
-                    <a href="" class="mobile-menu-social-link">
+                    <a href="" class="mobile-menu-social-link" aria-label="facebook">
                         <svg class="social-icon" width="24" height="24">
                             <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="mobile-menu-social-iteam">
-                    <a href="" class="mobile-menu-social-link">
+                    <a href="" class="mobile-menu-social-link" aria-label="linkedin">
                         <svg class="social-icon" width="24" height="24">
                             <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
@@ -169,7 +169,7 @@
         </div>
       </section>
 
-      <section class="section-three">
+      <section class="section-three" id="skills">
         <div class="container container-section-three">
           <h2>Навички</h2>
 <div class="container-section-three-ul-all">
@@ -197,7 +197,7 @@
         </div>
       </section>
 
-      <section class="section-four">
+      <section class="section-four" id="my-work">
         <div class="container container-section-four">
           <h2>Проєкти</h2>
           <div class="container-section-four-ul-all">
@@ -253,7 +253,7 @@
         </div>
       </section>
 
-     <section class="section-five">
+     <section class="section-five" id="figma">
         <div class="container container-section-five">
           <h2>Макети фігма</h2>
           <div class="container-section-five-ul-all">
@@ -309,7 +309,7 @@
         </div>
       </section>
 
-      <section class="section-designer">
+      <section class="section-designer" id="figma-desinge">
         <div class="container container-section-designer">
           <h2>Макет сайту створив дизайнер</h2>
           <div class="designer-content">
@@ -338,7 +338,7 @@
       </section>
     </main>
 
-    <footer class="section-fouter">
+    <footer class="section-fouter" id="telefon-mail">
       <div class="container container-section-fouter">
         <h2>Контакти</h2>
         <a href="mailto:your@email.com">your@email.com</a>
@@ -349,28 +349,28 @@
           <p class="social-title">Social media</p>
           <ul class="social-icons-two">
             <li class="foter-spisok">
-              <a href="#" class="ahref-two">
+              <a href="#" class="ahref-two" aria-label="instagram">
                 <svg class="social-icon-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram" />
                 </svg>
               </a>
             </li>
             <li class="foter-spisok">
-              <a href="#" class="ahref-two">
+              <a href="#" class="ahref-two" aria-label="twitter">
                 <svg class="social-icon-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter" />
                 </svg>
               </a>
             </li>
             <li class="foter-spisok">
-              <a href="#" class="ahref-two">
+              <a href="#" class="ahref-two" aria-label="facebook">
                 <svg class="social-icon-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook" />
                 </svg>
               </a>
             </li>
             <li class="foter-spisok">
-              <a href="#" class="ahref-two">
+              <a href="#" class="ahref-two" aria-label="linkedin">
                 <svg class="social-icon-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin" />
                 </svg>
