--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <div class="mobile-full-item">
     
               <ul class="mobile-menu-list">
-                <li><a href="./index.html" class="mobile-menu-link">Fullstack</a></li>
+                <li><a href="index.html" class="mobile-menu-link">Fullstack</a></li>
                 <li><a href="#skills" class="mobile-menu-link">Навички</a></li>
                 <li><a href="#my-work" class="mobile-menu-link">Мої роботи</a></li>
                 <li><a href="#figma" class="mobile-menu-link">Макети фігма</a></li>
@@ -341,7 +341,7 @@
     <footer class="section-fouter" id="telefon-mail">
       <div class="container container-section-fouter">
         <h2>Контакти</h2>
-        
+
         <a href="mailto:your@email.com">your@email.com</a>
         <a href="https://t.me/your_username">@your_username</a>
         <a href="https://github.com/yourusername">github.com/yourusername</a>
