--- a/index.html
+++ b/index.html
@@ -176,8 +176,7 @@
             <div>
               <p>Фронтенд:</p>
               <ul class="container-section-three-ul">
-                <li class="container-section-three-li">HTML5, CSS3, JavaScript, адаптивна
-                  верстка, робота з Figma</li>
+                <li class="container-section-three-li">HTML5</li>
                   <li class="container-section-three-li">CSS3</li>
                   <li class="container-section-three-li">JavaScript</li>
                   <li class="container-section-three-li">адаптивна
