--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           <h2>Про мене</h2>
           <p>
             Мене звати Віталій. Я проходжу курси Fullstack Developer і вже
-            створюю повноцінні сайти, адаптовані під всі пристрої. Вмію
+            створюю повноцінні сайти, адаптовані під всі пристрої. Не використовую margin i padding, тільки flex-box i grid. Вмію
             працювати з Figma, HTML, CSS, JavaScript, а також вивчаю бекенд.
           </p>
         </div>
