--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Fullstack Developer</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <meta name="description" content="Fullstack Developer створюю сучасні сайти, адаптовані під всі пристрої. Не використовую margin i padding, 
+            тільки flex-box i grid.">
   </head>
   <body>
     <header class="section-header">
@@ -143,7 +145,7 @@
         <div class="container container-section-one">
           <div>
             <h2>
-              Привіт! Я — починаючий Fullstack Developer Створюю сучасні сайти,
+              Привіт! Я — починаючий Fullstack Developer створюю сучасні сайти,
               верстаю з макетів Figma та розвиваюся в розробці веб-додатків
             </h2>
           </div>
@@ -163,8 +165,9 @@
           <h2>Про мене</h2>
           <p>
             Мене звати Віталій. Я проходжу курси Fullstack Developer і вже
-            створюю повноцінні сайти, адаптовані під всі пристрої. Не використовую margin i padding, тільки flex-box i grid. Вмію
-            працювати з Figma, HTML, CSS, JavaScript, а також вивчаю бекенд.
+            створюю повноцінні сайти, адаптовані під всі пристрої. Не використовую margin i padding, 
+            тільки flex-box i grid. А якщо і прийдеться використати, то тільки мінімальну кількість.
+            Вмію працювати з Figma(верстати з макету з точністю до пікселя), HTML, CSS, а також вивчаю JavaScript і бекенд.
           </p>
         </div>
       </section>
