--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Fullstack Developer</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <meta name="description" content="Fullstack Developer створюю сучасні сайти, адаптовані під всі пристрої. Не використовую margin i padding, 
             тільки flex-box i grid.">
   </head>
@@ -99,30 +100,23 @@
   
     <ul class="mobile-menu-social-list">
                 <li class="mobile-menu-social-iteam">
-                    <a href="" class="mobile-menu-social-link" aria-label="Instagram">
+                    <a href="https://www.instagram.com/ljresetl/" class="mobile-menu-social-link" aria-label="Instagram">
                         <svg class="social-icon" width="24" height="24">
-                            <use href="./images/icons.svg#icon-instagram"></use>
+                            <use href="./images/icons.svg#icon-icons8-instagram-2"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="mobile-menu-social-iteam">
-                    <a href="" class="mobile-menu-social-link" aria-label="twitter">
+                    <a href="https://www.facebook.com/vitalii.baranov.35/" class="mobile-menu-social-link" aria-label="facebook">
                         <svg class="social-icon" width="24" height="24">
-                            <use href="./images/icons.svg#icon-twitter"></use>
+                            <use href="./images/icons.svg#icon-icons8-facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="mobile-menu-social-iteam">
-                    <a href="" class="mobile-menu-social-link" aria-label="facebook">
+                    <a href="https://t.me/ljresetl" class="mobile-menu-social-link" aria-label="telegram">
                         <svg class="social-icon" width="24" height="24">
-                            <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="mobile-menu-social-iteam">
-                    <a href="" class="mobile-menu-social-link" aria-label="linkedin">
-                        <svg class="social-icon" width="24" height="24">
-                            <use href="./images/icons.svg#icon-linkedin"></use>
+                            <use href="./images/icons.svg#icon-icons8telegram"></use>
                         </svg>
                     </a>
                 </li>
@@ -169,6 +163,14 @@
             тільки flex-box i grid. А якщо і прийдеться використати, то тільки мінімальну кількість.
             Вмію працювати з Figma(верстати з макету з точністю до пікселя), HTML, CSS, а також вивчаю JavaScript і бекенд.
           </p>
+        <div class="one-section-image-container">
+            <img
+              src="./images/programming-background-collage411px.jpg"
+              alt="Amico Image"
+              width="500"
+              height="310"
+            />
+          </div>
         </div>
       </section>
 
@@ -354,28 +356,21 @@
             <li class="foter-spisok">
               <a href="#" class="ahref-two" aria-label="instagram">
                 <svg class="social-icon-footer" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram" />
-                </svg>
-              </a>
-            </li>
-            <li class="foter-spisok">
-              <a href="#" class="ahref-two" aria-label="twitter">
-                <svg class="social-icon-footer" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter" />
+                  <use href="./images/icons.svg#icon-icons8-instagram-2" />
                 </svg>
               </a>
             </li>
             <li class="foter-spisok">
               <a href="#" class="ahref-two" aria-label="facebook">
                 <svg class="social-icon-footer" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook" />
+                  <use href="./images/icons.svg#icon-icons8-facebook" />
                 </svg>
               </a>
             </li>
             <li class="foter-spisok">
-              <a href="#" class="ahref-two" aria-label="linkedin">
+              <a href="#" class="ahref-two" aria-label="telegram">
                 <svg class="social-icon-footer" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin" />
+                  <use href="./images/icons.svg#icon-icons8telegram" />
                 </svg>
               </a>
             </li>
