--- a/index.html
+++ b/index.html
@@ -198,6 +198,14 @@
               </ul>
             </div>
 </div>
+                    <div class="one-section-image-container">
+            <img
+              src="./images/programming-background-collage35(411).jpg"
+              alt="Amico Image"
+              width="500"
+              height="310"
+            />
+          </div>
         </div>
       </section>
 
@@ -346,29 +354,29 @@
       <div class="container container-section-fouter">
         <h2>Контакти</h2>
 
-        <a href="mailto:your@email.com">your@email.com</a>
-        <a href="https://t.me/your_username">@your_username</a>
-        <a href="https://github.com/yourusername">github.com/yourusername</a>
+        <a href="mailto:ljresetl@gmail.com" target="_blank">Напиши мені емейл</a>
+        <a href="https://t.me/ljresetl" target="_blank">Мій телеграм</a>
+        <a href="https://github.com/ljresetl " target="_blank">github-мій профіль</a>
 
         <div class="social-media">
           <p class="social-title">Social media</p>
           <ul class="social-icons-two">
             <li class="foter-spisok">
-              <a href="#" class="ahref-two" aria-label="instagram">
+              <a href="https://www.instagram.com/ljresetl/" target="_blank" class="ahref-two" aria-label="instagram">
                 <svg class="social-icon-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-icons8-instagram-2" />
                 </svg>
               </a>
             </li>
             <li class="foter-spisok">
-              <a href="#" class="ahref-two" aria-label="facebook">
+              <a href="https://www.facebook.com/vitalii.baranov.35/" target="_blank" class="ahref-two" aria-label="facebook">
                 <svg class="social-icon-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-icons8-facebook" />
                 </svg>
               </a>
             </li>
             <li class="foter-spisok">
-              <a href="#" class="ahref-two" aria-label="telegram">
+              <a href="https://t.me/ljresetl" class="ahref-two" target="_blank" aria-label="telegram">
                 <svg class="social-icon-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-icons8telegram" />
                 </svg>
