--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
 
       <section class="section-three" id="skills">
         <div class="container container-section-three">
-          <h2>Навички</h2>
+          <h2 class="container-section-three-h">Навички</h2>
 <div class="container-section-three-ul-all">
             <div>
-              <p>Фронтенд:</p>
+              <p class="container-section-three-p">Фронтенд:</p>
               <ul class="container-section-three-ul">
                 <li class="container-section-three-li">HTML5</li>
                   <li class="container-section-three-li">CSS3</li>
@@ -190,7 +190,7 @@
                   </ul>
             </div>
             <div>
-              <p>Інструменти:</p>
+              <p class="container-section-three-p">Інструменти:</p>
               <ul class="container-section-three-ul">
                 <li class="container-section-three-li">Git</li>
                 <li class="container-section-three-li">GitHub</li>
@@ -200,7 +200,7 @@
 </div>
                     <div class="one-section-image-container">
             <img
-              src="./images/programming-background-collage35(411).jpg"
+              src="./images/programming-background-collage411.png"
               alt="Amico Image"
               width="500"
               height="310"
