--- a/index.html
+++ b/index.html
@@ -181,20 +181,20 @@
             <div>
               <p class="container-section-three-p">Фронтенд:</p>
               <ul class="container-section-three-ul">
-                <li class="container-section-three-li">HTML5</li>
-                  <li class="container-section-three-li">CSS3</li>
-                  <li class="container-section-three-li">JavaScript</li>
+                <li class="container-section-three-li">HTML;</li>
+                  <li class="container-section-three-li">CSS;</li>
+                  <li class="container-section-three-li">JavaScript;</li>
                   <li class="container-section-three-li">адаптивна
-                  верстка</li>
-                  <li class="container-section-three-li">робота з Figma</li>
+                  верстка;</li>
+                  <li class="container-section-three-li">робота з Figma;</li>
                   </ul>
             </div>
-            <div>
+            <div class="container-section-three-ul-two">
               <p class="container-section-three-p">Інструменти:</p>
               <ul class="container-section-three-ul">
-                <li class="container-section-three-li">Git</li>
-                <li class="container-section-three-li">GitHub</li>
-                <li class="container-section-three-li">VS Code</li>
+                <li class="container-section-three-li">Git;</li>
+                <li class="container-section-three-li">GitHub;</li>
+                <li class="container-section-three-li">VS Code;</li>
               </ul>
             </div>
 </div>
