--- a/index.html
+++ b/index.html
@@ -213,16 +213,28 @@
         <div class="container container-section-four">
           <h2>Проєкти</h2>
           <div class="container-section-four-ul-all">
-            <h3 class="project-list-h3">Назва проєкту 1</h3>
-            <p class="project-list-p-opis">Опис: сайт з адаптивною версткою з макету Figma.</p>
-            <p>Технології:</p>
+            <h3 class="project-list-h3">Назва проекту - PRODUCT</h3>
+           <p class="project-list-p-opis">
+  Опис: сайт з адаптивною версткою з макету 
+  <a href="https://ljresetl.github.io/PRODUCT-business/" target="_blank" class="container-section-four-figma">Figma</a> 
+  та посиланням на сам макет: 
+  <a href="https://www.figma.com/design/CCjccFZI3jmjWZXlj1L3FL/Business-promotion--practice---Copy-?node-id=0-1&p=f&t=JOs5gpU9hrLargYf-0" target="_blank" class="maket-figma">макет Figma</a>.
+</p>
+<div class="one-section-image-container">
+            <img
+              src="./images/maket1(411).png"
+              alt="Amico Image"
+              width="500"
+              height="310"
+            />
+          </div>
+<p>Технології:</p>
             <div>
               <ul class="project-list">
                 <li class="project">HTML</li>
                 <li class="project">CSS</li>
                 <li class="project">JavaScript</li>
                   <a href="#">GitHub</a>
-                  <a href="#">Live Demo</a>
               </ul>
             </div>
               
