--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@
             <h3 class="project-list-h3">Назва проекту - PRODUCT</h3>
            <p class="project-list-p-opis">
   Опис: сайт з адаптивною версткою з макету 
-  <a href="https://ljresetl.github.io/PRODUCT-business/" target="_blank" class="container-section-four-figma">Figma</a> 
+  <a href="https://ljresetl.github.io/PRODUCT-business/" target="_blank" class="container-section-four-figma"><span class="container-section-four-figma-www">Figma</span></a> 
   та посиланням на сам макет: 
-  <a href="https://www.figma.com/design/CCjccFZI3jmjWZXlj1L3FL/Business-promotion--practice---Copy-?node-id=0-1&p=f&t=JOs5gpU9hrLargYf-0" target="_blank" class="maket-figma">макет Figma</a>.
+  <a href="https://www.figma.com/design/CCjccFZI3jmjWZXlj1L3FL/Business-promotion--practice---Copy-?node-id=0-1&p=f&t=JOs5gpU9hrLargYf-0" target="_blank" class="maket-figma"> <span class="container-section-four-figma-www">макет Figma</span></a>.
 </p>
 <div class="one-section-image-container">
             <img
@@ -231,10 +231,10 @@
 <p>Технології:</p>
             <div>
               <ul class="project-list">
-                <li class="project">HTML</li>
-                <li class="project">CSS</li>
-                <li class="project">JavaScript</li>
-                  <a href="#">GitHub</a>
+                <li class="project">HTML - Зроблено на високому рівні!</li>
+                <li class="project">CSS - Зроблено на високому рівні!</li>
+                <li class="project">JavaScript - Зроблено на високому рівні!</li>
+                  <a href="#">GitHub - Зроблено на високому рівні!</a>
               </ul>
             </div>
               
